--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 :root{
     --orange:#F2C14E;
 
-    --bloques-ganadores:#2d414b;
+    
 }
 body{
     color: var(--orenge );
@@ -17,6 +17,7 @@ body{
 h1{
     font-size: 54px;
     text-transform: uppercase;
+    justify-content: center;
 
  }
 
@@ -26,33 +27,35 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center ;
-    flex-direction: column;
+    flex-direction: center;
     background-color: #37505C;
  }
-
 
 #gueguito{
     width: 300px;
     display: flex;
     flex-wrap:wrap;
     margin-top: 40px;
+    border-collapse: collapse;
     
 }
 
 .contenedorMarcador{
     display: flex;
+    border-color: #F2C14E;
 }
-table {
+table{
     width: 25%; /* Ancho de la tabla */
     margin-left: 1%; /* Centrar horizontalmente */
     border-collapse: collapse;
     justify-content: center;
-    border-color: var(--orange);
-
+   
+   border-color: var(--orange);
 }
 th, td {
-    border: 1px solid black;
+    border: 2px solid var(--orange);
     padding: 8px;
+    
     text-align: right;
 }
 
@@ -83,12 +86,12 @@ button{
     border-radius: 100px 20px;
     border-radius: 10px;
     background-color: var(--orange);
-    color: #333;
+    margin-left: 10px;
     border-color: var(--orange);
     font-size: 18px;
     transition: 200ms transform;
     font-weight: 600;
-   justify-content: center;
+  
 }
 button:hover{
 cursor: pointer;
