--- a/style.css
+++ b/style.css
@@ -38,10 +38,17 @@ h1{
     margin-top: 40px;
     
 }
+
+.contenedorMarcador{
+    display: flex;
+}
 table {
-    width: 50%; /* Ancho de la tabla */
-    margin-left: 25%; /* Centrar horizontalmente */
+    width: 25%; /* Ancho de la tabla */
+    margin-left: 1%; /* Centrar horizontalmente */
     border-collapse: collapse;
+    justify-content: center;
+    border-color: var(--orange);
+
 }
 th, td {
     border: 1px solid black;
@@ -59,6 +66,7 @@ th, td {
     font-size: 120px;
     border-right: 2px solid;
     border-bottom: 2px solid;
+  
 
 }
 .box:nth-child(3n) {
